--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,11 +1,3 @@
-/* .landing_page {
-    background-color: chocolate;
-    background-image: url("../../img/Banner_médico.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-attachment: fixed;
-} */
-
 header {
     width: 100%;
     top: 0%;
@@ -78,27 +70,25 @@ a:hover {
     padding-top: 10px;
 }
 
-.burger_links {
+.menu {
+    background-color: rgba(50, 50, 50, 0.911);
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    line-height: 30px;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.hidden {
     display: none;
 }
 
-.btn_get_started {
-    background-color: blueviolet;
-    border-radius: 10px;
-    padding: 5px 10px 5px 10px;
-    font-size: 20px;
-    font-weight: bold;
-    align-content: center;
-}
-
-.btn_get_started:hover {
-    background-color: aquamarine;
-}
-
 @media (min-width: 769px) {
-    .burger_logo {
+    /* .burger_logo {
         display: none;
-    }
+    } */
     .burger_button {
         display: none;
     }
@@ -106,17 +96,19 @@ a:hover {
 
 @media (max-width: 768px) {
     .nav_links {
-        display: flex;
+        display: none;
+        /* display: flex;
         position: absolute;
         top: 100%;
         width: 100%;
         flex-direction: column;
         align-items: center;
-        padding: inherit
+        padding: inherit */
     }
 
     .burger_button {
         position: absolute;
+        /* justify-content: space-between; */
         width: 30px;
         height: 30px;
         right: 20px;
@@ -142,7 +134,7 @@ a:hover {
         top: 19px;
     }
 
-    .burger_links.active { 
+    /* .burger_links.active { 
         background-color: rgba(114, 60, 114, 0.342);
         width: 100px;
         top: 30px;
@@ -154,7 +146,7 @@ a:hover {
         display: flex;
         flex-direction: column;
         gap: 15px;
-    }   
+    }    */
 }
 
 
