--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -4,9 +4,9 @@
     background-color: blue;
 } */
 
-.landing_page {
+/* .landing_page {
     background-color: aquamarine;
-}
+} */
 
 .container_login {
     background-color: rgba(127, 255, 212, 0.384);
@@ -29,9 +29,9 @@
     .container_login {
         background-color: rgba(127, 255, 212, 0.384);
         width: 300px;
-        height: 450px;
-        margin: auto;
-        margin-top: 300px;
+        height: 250px;
+        margin: 70px auto;
+        /* margin-top: 300px; */
     }
 }
 
