--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -48,8 +48,8 @@
         background-color: rgba(127, 255, 212, 0.384);
         width: 300px;
         height: 450px;
-        margin: auto;
-        margin-top: 300px;
+        margin: 70px auto;
+        /* margin-top: 300px; */
     }
 }
 
