--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -22,7 +22,7 @@
 }
 
 .login_form {
-    padding: 10px;
+    margin-top: 10px;
 }
 
 @media (max-width: 768px) {
@@ -53,11 +53,10 @@
     background-color: red;
 }
 
-.field_for_text {
-    width: 250px;
+.form-control_login {
+    width: 230px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
 }
-.field_for_tex {
-    width: 260px;
-}
-
 
