--- a/client/src/Components/DoctorCardIC/DoctorCardIC.css
+++ b/client/src/Components/DoctorCardIC/DoctorCardIC.css
@@ -1,4 +1,4 @@
-.doctor-card-container {
+/* .doctor-card-container {
     width: 300px;
     height: 100%;
     border: 1px solid #ccc;
@@ -191,4 +191,4 @@ button:hover {
   background-color: green;
   cursor: pointer;
   /* color: rgb(249, 60, 60); */
-}
+} */
