--- a/client/src/Components/FindDoctorSearchIC/FindDoctorSearchIC.css
+++ b/client/src/Components/FindDoctorSearchIC/FindDoctorSearchIC.css
@@ -1,4 +1,4 @@
-.location-search-box {
+/* .location-search-box {
     display: flex;
     align-items: center;
     width: 286px;
@@ -176,4 +176,4 @@
     object-fit: cover;
     object-position: center;
     border-radius: 5px;
-}
+} */
